# hpc-game-of-life

./: .gitignore  Makefile  README.md  tests.cpp
docs/: .gitignore  Abgabe.tex  Design.drawio  VSC-Debug.md  export.drawio  game-of-life-presi.pptx  launch.json  myreferences.bib
docs/imgs/: GoLBoardToNDRange.drawio  opencl_mem_access.drawio
include/: GameOfLife.h  Patterns.h  Timing.h
include/common/: Patterns.h  Timing.h
include/optimized/: GameOfLife.h  OptGameOfLife.h  OptPatterns.h  OptTiming.h
include/unoptimized/: GameOfLife.h
src/: GameOfLife.cpp  Main.cpp
src/common/: Timing.cpp
src/opencl/: GameOfLife.cpp  gol_work_group.cl
src/opencl2/: GameOfLife.cpp  gol_work_group.cl
src/openmp-variant/: GameOfLife.cpp
src/optimized/: GameOfLife.cpp  Main.cpp  OptGameOfLife.cpp  OptMain.cpp  gol_work_group.cl  opencl-stuff.cpp
src/rust-opencl/: Cargo.toml
src/rust-opencl/src/: args.rs  board.rs  main.rs  opencl_meta_ctx.rs
src/unoptimized/: GameOfLife.cpp  Main.cpp  Timing.cpp
